--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -1,13 +1,15 @@
 <html>
-    <head><style> </style>
+    <head>
+      <link rel="stylesheet" href="./style.css">
         <title>
             tarea de HTML de Thomas
         </title>
        
     </head>
     <body>
+
          <div class="divClass">
-              <h1 style="color:blue">
+              <h1>
                 Thomas Loto
               </h1>  
               <h3>
@@ -17,20 +19,22 @@
                 Tarea de HTML/CSS
               </h4>
          </div>   
-          <div class="divClass">
+<div class="divClass" >
             <span id="spanId">
-                es una comida que se hace con pan , medallones de carne, mayonesa, lechuga y tomate 
+                me gustan las hambuergesas
             </span>
-            <a href="https://www.google.com/search?q=restaurantes&rlz=1C1CHZN_esAR1022AR1022&oq=resta&aqs=chrome.1.69i57j0i433i512l2j0i131i433i512j0i433i512j0i512l2j0i433j0i512l2.2298j0j7&sourceid=chrome&ie=UTF-8&tbs=lf:1,lf_ui:9&tbm=lcl&sxsrf=AJOqlzVTE0nMlWY5JNo-prdVtb9qosavPQ:1678116344067&rflfq=1&num=10&rldimm=6415415985828105815&lqi=CgxyZXN0YXVyYW50ZXNIwIv2-6yPgIAIWhgQABgAIgxyZXN0YXVyYW50ZXMqBAgDEACSAQpyZXN0YXVyYW50qgEUEAEqECIMcmVzdGF1cmFudGVzKA4&phdesc=AUVutYFs58o&ved=2ahUKEwjps9HEzsf9AhXKqJUCHeRAD9YQvS56BAgOEA0&sa=X&rlst=f#rlfi=hd:;si:6415415985828105815,l,CgxyZXN0YXVyYW50ZXNIwIv2-6yPgIAIWhgQABgAIgxyZXN0YXVyYW50ZXMqBAgDEACSAQpyZXN0YXVyYW50qgEUEAEqECIMcmVzdGF1cmFudGVzKA4,y,AUVutYFs58o;mv:[[-30.855981199999995,-64.5135992],[-30.864013999999994,-64.5260364]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:9">
+            <a href="https://www.mcdonalds.com.ar/">MCdonalds</a>
 
-            </a>
+           
           </div> 
-          <div id="thirdDiv">
+ <div id="thirdDiv">
             <ul>
                 <li>
-                    pan , medallon de carne
+                  <img src=https://i.pinimg.com/564x/9d/84/37/9d8437918cc6807b19eb78cfdd15b91a.jpg>
+                </li>
+                <li>
+                  <img src=https://i.pinimg.com/564x/e3/e5/b0/e3e5b0ed2b932874e435ce1e06413969.jpg>
                 </li>
             </ul>
-            <img src="https://i.picsum.photos/id/1080/400/200.jpg").> 
-    </body>
+ </div>
 </html>
